@@ -1,5 +1,7 @@
 ==
 
+* Move icons in thread-index to tag line
+* Allow user configured tag icons
 * Use color to indicate whether a message is marked in thread-index.
 
 == v0.10.2 / 2017-10-11
